# parallel-k-means

./: .gitignore  CMakeLists.txt  Makefile  main.cpp  main.py  mcc
data/: labels.csv
data/test/: distances.csv  init_centroids.csv  samples.csv
include/: array.hpp  k_means.hpp  reader.hpp  writer.hpp
src/: CMakeLists.txt  Makefile  benchmark  benchmark.cpp  generate  generate.cpp  main.cpp  main.py  plot.ipynb
src/.ipynb_checkpoints/: plot-checkpoint.ipynb
src/data/: init_centroids.csv
src/data/10000-128-10/: centers.csv  init_centroids.csv  labels.csv
src/data/10000-50-10/: centers.csv  labels.csv
src/data/160000-8-10/: centers.csv  init_centroids.csv  labels.csv
src/data/20000-64-10/: centers.csv  init_centroids.csv  labels.csv
src/data/320000-4-10/: centers.csv  init_centroids.csv
src/data/40000-32-10/: centers.csv  init_centroids.csv  labels.csv
src/data/5000-256-10/: centers.csv  init_centroids.csv  labels.csv
src/data/640000-2-10/: centers.csv  init_centroids.csv
src/data/80000-16-10/: centers.csv  init_centroids.csv  labels.csv
test/: CMakeLists.txt  array.hpp  k_means.hpp  test.cpp
test/data/: centers.csv  centroids.csv
